--- a/FE/src/components/User/Dashboard.css
+++ b/FE/src/components/User/Dashboard.css
@@ -22,6 +22,46 @@
   width: max-content !important;
 }
 
+.add-btn {
+  display: flex;
+  justify-content: center;
+
+  padding: 8px 15px;
+  border-radius: 20px;
+  align-items: center;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  background-color: transparent;
+  outline: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  font-weight: 600;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-size: 0.8125rem;
+  line-height: 1.75;
+  min-width: 64px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border: 1px solid rgba(99, 102, 241, 0.5);
+  color: rgb(99, 102, 241);
+  border-radius: 12px;
+  text-transform: none;
+  padding: 6px 16px;
+}
+
 .imgtu {
   width: 200px;
 }
@@ -844,4 +884,170 @@ body .is-layout-flex > * {
     var(--global-palette2) 100%
   ) !important;
   background-image: -webkit-linear-gradient(180deg, #a253d8 0%, #1545cb 100%);
+}
+.css-v57kt1 {
+  --Grid-columns: 12;
+  --Grid-columnSpacing: 24px;
+  --Grid-rowSpacing: 24px;
+  flex-flow: wrap;
+  min-width: 0px;
+  box-sizing: border-box;
+  display: flex;
+  margin: calc(var(--Grid-rowSpacing) / -2) calc(var(--Grid-columnSpacing) / -2);
+}
+.css-1m1aas1 {
+  -webkit-box-flex: 0;
+  flex-grow: 0;
+  flex-basis: auto;
+  width: calc(100% * 12 / var(--Grid-columns));
+  min-width: 0px;
+  box-sizing: border-box;
+  padding: calc(var(--Grid-rowSpacing) / 2) calc(var(--Grid-columnSpacing) / 2);
+}
+.css-1gq5e6f {
+  display: flex;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  padding: 16px;
+  border: 1px solid rgb(45, 55, 72);
+  border-radius: 8px;
+}
+.css-4u2is6 {
+  display: flex;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+}
+.css-drtivy {
+  position: relative;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 40px;
+  height: 40px;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  line-height: 1;
+  border-radius: 50%;
+  overflow: hidden;
+  user-select: none;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0px;
+  background-color: transparent;
+  color: rgb(255, 255, 255);
+}
+
+.css-4u2is6 > :not(style) ~ :not(style) {
+  margin: 0px 0px 0px 16px;
+}
+
+.css-1msa3n8 {
+  display: flex;
+  flex-direction: column;
+}
+.css-15udru3 {
+  margin: 0px;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.57;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  color: rgb(160, 174, 192);
+}
+
+.css-1msa3n8 > :not(style) ~ :not(style) {
+  margin: 4px 0px 0px;
+}
+
+.css-1oklce5 {
+  margin: 0px;
+  font-size: 1rem;
+  line-height: 1.57;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-weight: 500;
+}
+.min-aa {
+  height: 100px !important;
+}
+.asSA:disabled {
+  opacity: 0.2;
+  cursor: not-allowed;
+}
+.css-1msa3n8 > :not(style) ~ :not(style) {
+  margin: 4px 0px 0px;
+}
+.flex-a {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.css-5d62nz {
+  margin: 0px;
+  font-size: 0.75rem;
+  font-weight: 500;
+  line-height: 1.66;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  color: rgb(160, 174, 192);
+}
+
+.css-1s4gov3 {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  background-color: transparent;
+  outline: 0px;
+  border: 0px;
+  margin: 0px 0px 0px 16px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  text-align: center;
+  flex: 0 0 auto;
+  border-radius: 50%;
+  overflow: visible;
+  color: rgb(108, 115, 127);
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  font-size: 1.125rem;
+  padding: 4px;
+}
+.css-w0pj6f {
+  overflow: hidden;
+  pointer-events: none;
+  position: absolute;
+  z-index: 0;
+  inset: 0px;
+  border-radius: inherit;
+}
+@media (min-width: 600px) {
+  .css-1m1aas1 {
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    flex-basis: auto;
+    width: calc(100% * 6 / var(--Grid-columns));
+  }
+}
+
+@media (min-width: 900px) {
+  .css-1m1aas1 {
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    flex-basis: auto;
+    width: calc(100% * 4 / var(--Grid-columns));
+  }
 }
