--- a/FE/src/components/Admin/SingleUser/style.css
+++ b/FE/src/components/Admin/SingleUser/style.css
@@ -15,6 +15,10 @@
   font-size: 22px;
   margin-bottom: 20px;
 }
+.emt {
+  margin-bottom: 10px;
+  display: block;
+}
 .image-row-container {
   display: flex;
   flex-direction: row;
