--- a/FE/src/assets/css/styles.css
+++ b/FE/src/assets/css/styles.css
@@ -7071,8 +7071,8 @@ video {
   .sm\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .askasas.sm\:grid-cols-2 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -7319,8 +7319,9 @@ video {
       rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y))
       scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+
+  .askasas.lg\:grid-cols-3 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .lg\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -7338,6 +7339,9 @@ video {
 @media (min-width: 1280px) {
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+  .askasas.xl\:grid-cols-4 {
+    grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
   }
   .xl\:px-10 {
     padding-left: 2.5rem;
