--- a/FE/src/components/User/Dashboard.css
+++ b/FE/src/components/User/Dashboard.css
@@ -1136,3 +1136,49 @@ body .is-layout-flex > * {
 .uppercase {
   text-transform: uppercase !important;
 }
+.toggle-switch {
+  position: relative;
+  display: inline-block;
+  width: 34px;
+  height: 14px;
+}
+
+.toggle-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 14px;
+}
+
+input:checked + .slider:before {
+  transform: translateX(22px);
+}
+.chkbx:disabled ~ .slider {
+  opacity: 0.5 !important;
+  cursor: default;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 17px;
+  width: 17px;
+  left: -3px;
+  bottom: -1.5px;
+  background-color: rgb(234, 234, 234);
+  transition: 0.4s;
+  border-radius: 50%;
+}
+input:checked + .slider {
+  background-color: #8b5cf6;
+}
